--- a/crypto-app/src/index.html
+++ b/crypto-app/src/index.html
@@ -11,7 +11,7 @@
       <div class="row">
           <div id="price-container">
               <p class="subtext">Current BTC USD</p>
-              <h1 id="price">$9,503.21</h1>
+              <h1 id="price">(loading...)</h1>
           </div>
           <div id="goal-container">
               <p><img src="../assets/images/up.svg"><span id="targetPrice">Choose a Target Price</span></p>
